добавил s3 полностью, сделал web чтобы его протестировать, была маленькая index.html страница для теста
